added gui and cli test into test_data_support_scenarios.py and test results as well as changes of jupyternotebook for generating test-scenarios

--- a/validation/python/make_testing_scenarios_csv.ipynb
+++ b/validation/python/make_testing_scenarios_csv.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The below code automatically creates a csv file with testing scenarios. Based on the metatdata of each dataset collection a short temporal subset, a subset of up to 3 variables and a spatial subset of 1°lat x 1°lon is defined. This code should only be run when changes of the open search portal have occured, otherwise the testing scenario csv should be always reused in order to have consecutive testing results based on the same scenarios which then allow to see the changes between test runs. "
+    "The below code automatically creates a csv file with testing scenarios. Based on the metatdata of each dataset collection a short temporal subset, a subset of up to 2 variables and a spatial subset of 0.1°lat x 0.1°lon is defined. This code should only be run when changes of the open search portal have occured, otherwise the testing scenario csv should be always reused in order to have consecutive testing results based on the same scenarios which then allow to see the changes between test runs. "
    ]
   },
   {
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Name of the output file of the test scenarios csv\n",
-    "test_scenarios_csv = 'test_scenarios_after_release_1.csv'"
+    "test_scenarios_csv = 'test_scenarios_2.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,20 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "esacci.ICESHEETS.satellite-orbit-frequency.L4.GLL.multi-sensor.multi-platform.VARIOUS.v1-3.r1 has no file list. dataset._file_list :\n",
-      "[]\n",
-      "esacci.FIRE.mon.L3S.BA.MODIS.Terra.MODIS_TERRA.v5-1.pixel has no file list. dataset._file_list :\n",
-      "[]\n",
       "esacci.ICESHEETS.mon.IND.GMB.GRACE-instrument.GRACE.VARIOUS.1-3.time_series has no file list. dataset._file_list :\n",
       "[]\n",
       "esacci.FIRE.mon.L3S.BA.MSI-(Sentinel-2).Sentinel-2A.MSI.v1-1.pixel has no file list. dataset._file_list :\n",
+      "[]\n",
+      "esacci.FIRE.mon.L3S.BA.MODIS.Terra.MODIS_TERRA.v5-1.pixel has no file list. dataset._file_list :\n",
+      "[]\n",
+      "esacci.ICESHEETS.satellite-orbit-frequency.L4.GLL.multi-sensor.multi-platform.VARIOUS.v1-3.r1 has no file list. dataset._file_list :\n",
       "[]\n",
       "esacci.ICESHEETS.yr.L4.CFL.multi-sensor.multi-platform.VARIOUS.v3-0.r1 has no file list. dataset._file_list :\n",
       "[]\n"
@@ -179,15 +179,19 @@
     "            \n",
     "    test_rows['temporal_subset'] = time_range\n",
     "    var_list = []\n",
+    "    strings_not_to_be_in_var = ['longitude', 'latitude', 'lat', 'lon', 'bounds', 'bnds', 'date']\n",
+    "\n",
+    "       \n",
     "    if len(dataset.meta_info['variables']) > 3:\n",
     "        while len(var_list) < 1:\n",
-    "            for var in random.choices(dataset.meta_info['variables'], k=3):\n",
-    "                if not ('longitude' in var['name'] or 'latitude' in var['name'] or 'bounds' in var['name'] or 'bnds' in var['name']) and var['name'] not in var_list:\n",
+    "            for var in random.choices(dataset.meta_info['variables'], k=2):\n",
+    "                if not (any(string in var['name'] for string in strings_not_to_be_in_var)) and var['name'] not in var_list:\n",
     "                    var_list.append(var['name'])\n",
     "    else:\n",
     "        for var in dataset.meta_info['variables']:\n",
-    "            if not ('longitude' in var['name'] or 'latitude' in var['name'] or 'bounds' in var['name'] or 'bnds' in var['name']) and var['name'] not in var_list:\n",
+    "            if not (any(string in var['name'] for string in strings_not_to_be_in_var)) and var['name'] not in var_list:\n",
     "                var_list.append(var['name'])\n",
+    "\n",
     "    test_rows['variables_subset'] = var_list\n",
     "#    print(var_list)\n",
     "    indx = random.uniform(float(dataset.meta_info['bbox_minx']), float(dataset.meta_info['bbox_maxx']))\n",
@@ -197,13 +201,13 @@
     "    if indy == float(dataset.meta_info['bbox_maxy']):\n",
     "        indy = indy-1\n",
     "    if indx > 0 and indy > 0:  \n",
-    "        test_rows['spatial_subset'] = f'{indx}, {indy}, {(indx+1)}, {(indy+1)}'\n",
+    "        test_rows['spatial_subset'] = f'{\"{:.1f}\".format(indx)}, {\"{:.1f}\".format(indy)}, {\"{:.1f}\".format((indx+0.1))}, {\"{:.1f}\".format((indy+0.1))}'\n",
     "    elif indx < 0 and indy < 0:\n",
-    "        test_rows['spatial_subset'] = f'{(indx-1)}, {(indy-1)}, {indx}, {indy}'\n",
+    "        test_rows['spatial_subset'] = f'{\"{:.1f}\".format((indx-0.1))}, {\"{:.1f}\".format((indy-0.1))}, {\"{:.1f}\".format(indx)}, {\"{:.1f}\".format(indy)}'\n",
     "    elif indx < 0:\n",
-    "        test_rows['spatial_subset'] = f'{(indx-1)}, {indy},{indx}, {(indy+1)}'\n",
+    "        test_rows['spatial_subset'] = f'{\"{:.1f}\".format((indx-0.1))}, {\"{:.1f}\".format(indy)},{\"{:.1f}\".format(indx)}, {\"{:.1f}\".format((indy+0.1))}'\n",
     "    elif indy < 0:\n",
-    "        test_rows['spatial_subset'] = f'{indx}, {(indy-1)}, {(indx+1)}, {indy}'\n",
+    "        test_rows['spatial_subset'] = f'{\"{:.1f}\".format(indx)}, {\"{:.1f}\".format((indy-0.1))}, {\"{:.1f}\".format((indx+0.1))}, {\"{:.1f}\".format(indy)}'\n",
     "\n",
     "#    print(test_rows['spatial_subset'])\n",
     "    update_csv(test_scenarios_csv, test_scenarios_header_row, test_rows)"
